--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
