--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.0",
     "react-scroll": "^1.9.3",
